# Gameguard

./: .env.example  .gitignore  README.MD  docker-compose.yaml  init_data.py  pyproject.toml
app/: config.py  main.py
app/databases/: elasticsearch_client.py  milvus_client.py  mysql_client.py  neo4j_client.py  redis_client.py
app/detectors/: graph_detect.py  rule_engine.py  vector_detect.py
app/graph/: builder.py  nodes.py  state.py
app/models/: request.py  response.py
app/services/: embedding_client.py  llm_client.py
docs/: architecture.md  rrf-experiment.md
tests/: test_detect.py
