[project]
name = "gameguard"
version = "0.1.0"
description = "GameGuard 风控系统"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.32.0",
    "pymysql>=1.1.0",
    "redis>=5.2.0",
    "elasticsearch>=8.15.0",
    "pymilvus>=2.6.9",
    "neo4j>=5.27.0",
    "langgraph>=0.5.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "faker>=30.0.0",
    "numpy>=1.26.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true